--- a/htdocs/css/barchat.css
+++ b/htdocs/css/barchat.css
@@ -1,7 +1,7 @@
 html, body {
 	height: 100%;
 	margin: 0px;
-	font-family: arial;
+	font: normal 13px/100% Verdana, Tahoma, sans-serif;
 }
 header {
 	background-color: #e0e0e0;
@@ -91,6 +91,55 @@ header h1 {
 #roomtabs a {
 	color: #666;
 	text-decoration: none;
+}
+
+#loginform {
+	margin: 80px 20px;
+}
+#loginform #server {
+	width: 220px;
+	margin-right: 4px;
+}
+#loginform input,
+#loginform select {
+	padding: 9px;
+	border: solid 1px #E5E5E5;
+	outline: 0;
+	width: 200px;
+	background: #FFFFFF;
+}
+#loginform select,
+#loginform select:hover,
+#loginform input:hover, 
+#loginform input:focus {
+	border-color: #C9C9C9;
+	-webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 8px;
+}
+#loginform label {
+	margin-left: 10px;
+	color: #999999;
+}
+#loginform input,
+#loginform select {
+	box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
+	-moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
+	-webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px;
+	background: -webkit-gradient(linear, left top, left 25, from(#FFFFFF), color-stop(4%, #eeeeee), to(#FFFFFF));
+	background: -moz-linear-gradient(top, #FFFFFF, #eeeeee 1px, #FFFFFF 25px);
+}
+#loginform input[type="submit"] {
+	width: auto;
+	padding: 9px 15px;
+	background: #616161;
+	border: 0;
+	font-size: 14px;
+	color: #FFFFFF;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+}
+#loginform input[type="submit"]:hover,
+#loginform input[type="submit"]:focus {
+	background: #888888;
 }
 
 .room .message {
