Require emails to register.

--- a/views/index.html
+++ b/views/index.html
@@ -82,6 +82,9 @@
 							<input type="password" id="password" name="password">
 							<label for="password">Password</label>
 						<p>
+							<input type="email" id="email" name="password">
+							<label for="email">Email (required for registration)</label>
+						<p>
 							<input type="submit" id="login" name="login" value="Log In">
 							<input type="submit" id="register" name="register" value="Register">
 					</table>
