--- a/views/index.html
+++ b/views/index.html
@@ -60,7 +60,7 @@
 </script>
 
 <script id="message_text" type="text/html">
-<div class="message_text" data-timestamp="{{timestamp}}"><span class="timestamp">{{msgdate}}</span>{{msg}}</div>
+<div class="message_text" id="msg_{{_id}}" data-msgid="{{_id}}" data-timestamp="{{timestamp}}"><span class="timestamp">{{msgdate}}</span>{{msg}}</div>
 </script>
 
 <div id="wrap">
